--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <a href="#" class="button">Download CV</a>
                     </div>
                     <div class="home__social">
-                        <a href="https://github.com/" target="_blank" class="home__social-link">
+                        <a href="https://github.com/SuyogLuitel" target="_blank" class="home__social-link">
                             <i class="ri-github-fill"></i>
                         </a>
-                        <a href="https://www.linkedin.com/" target="_blank" class="home__social-link">
+                        <a href="https://www.linkedin.com/in/suyog-luitel-4349312a0/" target="_blank" class="home__social-link">
                             <i class="ri-linkedin-box-line"></i>
                         </a>
                     </div>
