--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h1 class="home__title">Suyog Luitel</h1>
                         <h3 class="home__education">Front-end Developer</h3>
                         <p class="home__description">With knowledge in web development and design, I offer the best projects resulting in quality work.</p>
-                        <a href="#" class="button">Download CV</a>
+                        <a href="image/SUYOG LUITEL.pdf" target="_blank" class="button">Download CV</a>
                     </div>
                     <div class="home__social">
                         <a href="https://github.com/SuyogLuitel" target="_blank" class="home__social-link">
