--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
       </div>
       <div id="socials-container">
-        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="window.open('https://www.linkedin.com/in/suyog-luitel-4349312a0/', '_blank');" />
-        <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="window.open('https://github.com/SuyogLuitel', '_blank');" />
+        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
+          onclick="window.open('https://www.linkedin.com/in/suyog-luitel-4349312a0/', '_blank');" />
+        <img src="./assets/github.png" alt="My Github profile" class="icon"
+          onclick="window.open('https://github.com/SuyogLuitel', '_blank');" />
       </div>
     </div>
   </section>
@@ -83,7 +85,10 @@
           </div>
         </div>
         <div class="text-container">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis reprehenderit et laborum, rem, dolore eum quod voluptate exercitationem nobis, nihil esse debitis maxime facere minus sint delectus velit in eos quo officiis explicabo deleniti dignissimos. Eligendi illum libero dolorum cum laboriosam corrupti quidem, reiciendis ea magnam? Nulla, impedit fuga!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis reprehenderit et laborum, rem, dolore eum
+            quod voluptate exercitationem nobis, nihil esse debitis maxime facere minus sint delectus velit in eos quo
+            officiis explicabo deleniti dignissimos. Eligendi illum libero dolorum cum laboriosam corrupti quidem,
+            reiciendis ea magnam? Nulla, impedit fuga!</p>
         </div>
       </div>
     </div>
@@ -164,8 +169,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Project One</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -174,8 +181,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Project Two</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -184,8 +193,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Project Three</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
           </div>
         </div>
       </div>
@@ -222,7 +233,7 @@
     </nav>
     <p>Copyright &#169; 2023 Suyog Luitel. All Rights Reserved.</p>
   </footer>
-  
+
   <script src="script.js"></script>
 </body>
 
