--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Suyog Luitel - My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
-  <link rel="icon" type="image/x-icon" href="./favicon.png">
+  <link rel="icon" type="image/x-icon" href="./favicon.png" />
 </head>
 
 <body>
@@ -52,8 +52,12 @@
       <h1 class="title">Suyog Luitel</h1>
       <p class="section-text-p2">Frontend Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/myCV.pdf')">Download CV</button>
-        <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+        <button class="btn btn-color-2" onclick="window.open('./assets/myCV.pdf')">
+          Download CV
+        </button>
+        <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          Contact Info
+        </button>
       </div>
       <div id="socials-container">
         <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
@@ -85,10 +89,14 @@
           </div>
         </div>
         <div class="text-container">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis reprehenderit et laborum, rem, dolore eum
-            quod voluptate exercitationem nobis, nihil esse debitis maxime facere minus sint delectus velit in eos quo
-            officiis explicabo deleniti dignissimos. Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-            reiciendis ea magnam? Nulla, impedit fuga!</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
+            reprehenderit et laborum, rem, dolore eum quod voluptate
+            exercitationem nobis, nihil esse debitis maxime facere minus sint
+            delectus velit in eos quo officiis explicabo deleniti dignissimos.
+            Eligendi illum libero dolorum cum laboriosam corrupti quidem,
+            reiciendis ea magnam? Nulla, impedit fuga!
+          </p>
         </div>
       </div>
     </div>
@@ -170,9 +178,13 @@
           <h2 class="experience-sub-title project-title">Project One</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">
+              Github
+            </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">
+              Live Demo
+            </button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -182,9 +194,13 @@
           <h2 class="experience-sub-title project-title">Project Two</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">
+              Github
+            </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">
+              Live Demo
+            </button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -194,9 +210,13 @@
           <h2 class="experience-sub-title project-title">Project Three</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Github</button>
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">
+              Github
+            </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">Live Demo</button>
+              onclick="window.open('https://github.com/SuyogLuitel', '_blank');">
+              Live Demo
+            </button>
           </div>
         </div>
       </div>
@@ -210,11 +230,15 @@
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:suyogluitel235@gmail.com">suyogluitel235@gmail.com</a></p>
+        <p>
+          <a href="mailto:suyogluitel235@gmail.com">suyogluitel235@gmail.com</a>
+        </p>
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-        <p><a href="https://www.linkedin.com/in/suyog-luitel-4349312a0/" target="_blank">LinkedIn</a></p>
+        <p>
+          <a href="https://www.linkedin.com/in/suyog-luitel-4349312a0/" target="_blank">LinkedIn</a>
+        </p>
       </div>
     </div>
   </section>
