--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section-pic-container">
-        <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
+        <img src="./assets/profile-pic.png" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
